@@ -20,8 +20,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
 
-    implementation 'org.apache.spark:spark-core_2.13:3.5.3'
-    implementation 'org.apache.spark:spark-sql_2.13:3.5.3'
+    implementation 'org.apache.spark:spark-core_2.12:3.2.4'
+    implementation 'org.apache.spark:spark-sql_2.12:3.2.4'
+    implementation 'org.codehaus.janino:janino:3.0.16'
+    implementation 'org.slf4j:slf4j-reload4j:2.0.16'
+    implementation 'org.apache.orc:orc-core:1.5.10'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.34'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
@@ -30,7 +33,8 @@ dependencies {
     testImplementation 'org.jeasy:easy-random-core:5.0.0'
     testImplementation 'org.slf4j:slf4j-nop:2.0.7'
 
-    testImplementation 'org.apache.spark:spark-sql_2.13:3.5.3'
+    testImplementation 'org.apache.spark:spark-sql_2.12:3.2.4'
+    testImplementation 'org.slf4j:slf4j-reload4j:2.0.16'
 }
 
 test {
@@ -49,12 +53,27 @@ test {
             "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
             "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
             "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
-            "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
-            "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
-            ]
+            "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
+    ]
+}
+
+compileTestJava {
+    options.compilerArgs.add('--add-exports=java.base/sun.nio.ch=ALL-UNNAMED')
+}
+
+compileJava {
+    options.compilerArgs.add('--add-exports=java.base/sun.nio.ch=ALL-UNNAMED')
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'ru.itmo.hasd.Main'
+        )
+    }
 }
 
 group = 'ru.itmo.hasd'
 version = '1.0-SNAPSHOT'
 description = 'saving-compression-algorithms'
-java.sourceCompatibility = JavaVersion.VERSION_17
+java.sourceCompatibility = JavaVersion.VERSION_17 // Для Spark переключить на 11
